test/fails/bad_tags/assign1.lgl
void main() {
    tag a is vec2;

    vec2 x = [1., 2.]; 
    a y = x; // No downcasting!
}
